syntax = "proto3";

package cheers.activity.v1;

import "cheers/type/user/user.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option go_package = "github.com/salazarhugo/cheers1/genproto/cheers/activity/v1;activity";

service ActivityService {
  rpc ListActivity (ListActivityRequest) returns (ListActivityResponse);
}

message ListActivityRequest {
  string user_id = 1;
}

message ListActivityResponse {
  repeated Activity activities = 1;
}

message Activity {
  enum ActivityType {
    LIKE_POST = 0;
    LIKE_STORY = 1;
    FOLLOW = 2;
    COMMENT_POST = 3;
    MENTION_POST = 4;
  }
  string text = 2;
  cheers.type.UserItem user = 3;
  google.protobuf.Timestamp timestamp  = 4;
  optional string media = 5;
}