syntax = "proto3";

package cheers.api.v1;

import "cheers/type/party/party.proto";
import "cheers/type/post/post.proto";
import "cheers/type/user/user.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option go_package = "github.com/salazarhugo/cheers1/genproto/cheers/api/v1;api";

service Main {
  rpc CreateParty (CreatePartyRequest) returns (cheers.type.Party);
  rpc ListParty (ListPartyRequest) returns (ListPartyResponse);
  rpc UpdateParty (UpdatePartyRequest) returns (cheers.type.Party);
  rpc DeleteParty (DeletePartyRequest) returns (google.protobuf.Empty);

  rpc CreatePost (CreatePostRequest) returns (cheers.type.Post);
  rpc ListPost (google.protobuf.Empty) returns (ListPostResponse);
  rpc UpdatePost (UpdatePostRequest) returns (cheers.type.Post);
  rpc DeletePost (DeletePostRequest) returns (google.protobuf.Empty);
}

message CreatePartyRequest {
  cheers.type.Party party = 1;
}

message CreatePartyResponse {
}

message ListPartyRequest {
  string parent = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListPartyResponse {
  repeated cheers.type.Party parties = 1;
}

message UpdatePartyRequest {
  cheers.type.Party party = 1;
}

message UpdatePartyResponse {
  cheers.type.Party party = 1;
}

message DeletePartyRequest {
  string id = 1;
}

message CreatePostRequest {
  cheers.type.Post post = 1;
}

message UpdatePostRequest {
  cheers.type.Post post = 1;
}

message UpdatePostResponse {
  cheers.type.Post post = 1;
}

message DeletePostRequest {
  string id = 1;
}

message ListPostRequest {
  string parent = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListPostResponse {
  repeated PostResponse posts = 1;
  string next_page_token = 2;
}

message GetUserRequest {
  oneof identification {
    string user_id = 1;
    string username = 2;
  }
}

message GetUserResponse {
//  cheers.User user = 1;
  int64 post_count = 2;
  bool follow_back = 3;
  int64 following_count = 4;
  int64 followers_count = 5;
  string story_state = 6;
}

message PostResponse {
  cheers.type.Post post = 1;
  cheers.type.User user = 2;
  int64 like_count = 3;
  int64 comment_count = 4;
  bool has_liked = 5;
  bool comments_enabled = 6;
  bool reshare_enabled = 8;
  int64 media_count = 7;
}